--- a/Dotnetcoresamples/.vscode/launch.json
+++ b/Dotnetcoresamples/.vscode/launch.json
@@ -1,28 +1,26 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
-   // Use hover for the description of the existing attributes
-   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-   "version": "0.2.0",
-   "configurations": [
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build producer",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Iotdotnetcorepublisher/bin/Debug/netcoreapp2.0/Iotdotnetcorepublisher.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/Iotdotnetcorepublisher",
+            "program": "${workspaceFolder}/Iotdotnetcoreconsumer/bin/Debug/netcoreapp2.1/Iotdotnetcoreconsumer.dll",
+            "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
-            "console": "internalConsole",
+            "console": "integratedTerminal",
             "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
+            "logging": {
+                "exceptions": true,
+                "programOutput": true,
+                "engineLogging": false,
+                "moduleLoad": false
+            }
         }
-    ,]
+    ]
 }
