--- a/Dotnetcoresamples/Iotdotnetcorepublisher/Iotdotnetcorepublisher.csproj
+++ b/Dotnetcoresamples/Iotdotnetcorepublisher/Iotdotnetcorepublisher.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="M2MqttClientDotnetCore" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\certificates\*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>  
   </ItemGroup>
 
 </Project>
