Cleaning up consumer and moving to interrupt based console app instead of while true statement.

--- a/Dotnetsamples/Iotconsumer/Iotconsumer/Iotconsumer.csproj
+++ b/Dotnetsamples/Iotconsumer/Iotconsumer/Iotconsumer.csproj
@@ -52,4 +52,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(SolutionDir)\..\certificates" "$(TargetDir)" /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
