--- a/Dotnetsamples/Iotpublisher/Iotpublisher/Iotpublisher.csproj
+++ b/Dotnetsamples/Iotpublisher/Iotpublisher/Iotpublisher.csproj
@@ -52,4 +52,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(SolutionDir)\..\certificates" "$(TargetDir)" /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
